; ModuleID = '/home/carl/AnghaBench/postgres/src/common/extr_file_utils.c_fsync_parent_path.c'
source_filename = "/home/carl/AnghaBench/postgres/src/common/extr_file_utils.c_fsync_parent_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAXPGPATH = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [2 x i8] c".\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fsync_parent_path(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %7 = load i32, i32* @MAXPGPATH, align 4
  %8 = zext i32 %7 to i64
  %9 = call i8* @llvm.stacksave()
  store i8* %9, i8** %4, align 8
  %10 = alloca i8, i64 %8, align 16
  store i64 %8, i64* %5, align 8
  %11 = load i8*, i8** %3, align 8
  %12 = load i32, i32* @MAXPGPATH, align 4
  %13 = call i32 @strlcpy(i8* %10, i8* %11, i32 %12)
  %14 = call i32 @get_parent_directory(i8* %10)
  %15 = call i64 @strlen(i8* %10)
  %16 = icmp eq i64 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %1
  %18 = load i32, i32* @MAXPGPATH, align 4
  %19 = call i32 @strlcpy(i8* %10, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32 %18)
  br label %20

20:                                               ; preds = %17, %1
  %21 = call i64 @fsync_fname(i8* %10, i32 1)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %20
  store i32 -1, i32* %2, align 4
  store i32 1, i32* %6, align 4
  br label %25

24:                                               ; preds = %20
  store i32 0, i32* %2, align 4
  store i32 1, i32* %6, align 4
  br label %25

25:                                               ; preds = %24, %23
  %26 = load i8*, i8** %4, align 8
  call void @llvm.stackrestore(i8* %26)
  %27 = load i32, i32* %2, align 4
  ret i32 %27
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @strlcpy(i8*, i8*, i32) #2

declare dso_local i32 @get_parent_directory(i8*) #2

declare dso_local i64 @strlen(i8*) #2

declare dso_local i64 @fsync_fname(i8*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
